@@ -1,3 +1,8 @@
+2004-05-27  James Tanis  <jtt@buscemi.sysdetect.com>
+
+	* lib/b_string.c (bk_string_csv_quote): Function to quote string
+	for BAKA csv processing.
+
 2004-05-19  James Tanis  <jtt@buscemi.sysdetect.com>
 
 	* lib/b_ringbuf.c (bk_ring_read): Name a variable deadbeef and use
